...
                    // MARK: Header
                    AppHeaderBar {
                        if showFromRead {
                            CloseHeaderButton {
                                showFromRead = false
                            }
                            .accessibilityIdentifier("select-close")
                        } else {
                            MenuButtonView()
                                .environmentObject(settingsManager)
                        }
                    } center: {
                        Text("page.select.title".localized)
...
