...
                    } label: {
                        Text(saveButtonTitle)
                            .fontWeight(.bold)
                    }
                    .foregroundColor(canSave ? Color("Mustard") : Color.gray)
                    .disabled(!canSave)
                    .accessibilityIdentifier("multi-config-save")
                }
                .appHeaderBackground(isEmbedded: true)
                
                ScrollView {
                    VStack(spacing: 0) {
                        if !inlineErrorMessage.isEmpty {
...
